--- a/.github/workflows/zotero_pull.yml
+++ b/.github/workflows/zotero_pull.yml
@@ -67,19 +67,26 @@ jobs:
             -t "test" \
             --lib-id "$ZOTERO_LIBRARY_ID" \
             --api-key "$ZOTERO_API_KEY" \
-            --outfile "01_references.md" \
+            --outfile "_history/01_references.md" \
             --headerfile "_history/references_header.md"
             
       # Commit the created reference file to the Master branch
+      #- name: Commit references file
+      #  uses: dmnemec/copy_file_to_another_repo_action@main
+      #  env:
+      #    API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
+      #  with:
+      #    source_file: '01_references.md'
+      #    destination_repo: 'megosato/samplchallenges.github.io'
+      #    destination_branch: 'master'
+      #    destination_folder: '_history'
+      #    user_email: 'osatom@uci.edu'
+      #    user_name: 'megosato'
+      #    commit_message: 'Update references file with zotero references'
+
       - name: Commit references file
-        uses: dmnemec/copy_file_to_another_repo_action@main
-        env:
-          API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
-        with:
-          source_file: '01_references.md'
-          destination_repo: 'megosato/samplchallenges.github.io'
-          destination_branch: 'master'
-          destination_folder: '_history'
-          user_email: 'osatom@uci.edu'
-          user_name: 'megosato'
-          commit_message: 'Update references file with zotero references'
+        uses: EndBug/add-and-commit@v8 
+        with: 
+          add: '_history/01_references.md'
+          author_name: 'Github Actions'
+          message: 'Your commit message'
