--- a/.github/workflows/zotero_pull.yml
+++ b/.github/workflows/zotero_pull.yml
@@ -89,11 +89,11 @@ jobs:
         uses: UnicornGlobal/has-changes-action@v1.0.11
 
       - name: Create commits
-        if ${{ steps.changes.outputs.changed }}:
+        if: steps.changes.outputs.changed == 1
         run: |
           git add _history/02_allreferences.md
           git commit -m "zotero_pull action: Update 02_allreferences.md List"
 
       - name: Create PR with updated references file
-        if ${{ steps.changes.outputs.changed }}:
+        if: steps.changes.outputs.changed == 1
         uses: peter-evans/create-pull-request@v3
