--- a/.github/workflows/zotero_pull.yml
+++ b/.github/workflows/zotero_pull.yml
@@ -91,11 +91,13 @@ jobs:
       - name: Create commits
         if: steps.changes.outputs.changed == 1
         run: |
-          git config --global user.email "zotero_pull@github.com"
-          git config --global user.name "Zotero Pull Workflow"
+          git config --global user.email ${{ github.actor }}@users.noreply.github.com
+          git config --global user.name ${{ github.actor }}
           git add _history/02_allreferences.md
           git commit -m "zotero_pull action: Update 02_allreferences.md List"
 
       - name: Create PR with updated references file
         if: steps.changes.outputs.changed == 1
         uses: peter-evans/create-pull-request@v3
+        with:
+          title: 'Zotero Pull Workflow update references
